test/fail/missing_brace.zn
# ERRORS: 1
# Missing brace

func main() {
    if true {
        var x = 1

    return 0
}
